--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>لعبة X O المتقدمة - اونلاين</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- إضافة Font Awesome للأيقونات الاحترافية -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
@@ -13,11 +15,17 @@
         <!-- Player Name Setup -->
         <div class="player-setup" id="playerSetup">
             <div class="setup-content">
-                <h2>🎮 مرحباً بك في لعبة X O</h2>
+                <div class="game-logo">
+                    <i class="fas fa-gamepad"></i>
+                    <h2>مرحباً بك في لعبة X O</h2>
+                </div>
                 <p class="subtitle">أدخل اسمك للبدء في اللعب</p>
                 <div class="input-group">
                     <input type="text" id="playerNameInput" placeholder="أدخل اسمك" maxlength="20" autocomplete="off">
-                    <button id="setNameBtn">تأكيد</button>
+                    <button id="setNameBtn">
+                        <i class="fas fa-check"></i>
+                        <span>تأكيد</span>
+                    </button>
                 </div>
                 <div class="loading" id="nameLoading" style="display: none;">
                     <div class="spinner"></div>
@@ -29,8 +37,12 @@
         <!-- Main Menu -->
         <div class="main-menu" id="mainMenu" style="display: none;">
             <header>
-                <h1 class="game-title">🎮 لعبة X O المتقدمة</h1>
+                <div class="game-header">
+                    <i class="fas fa-trophy game-icon"></i>
+                    <h1 class="game-title">لعبة X O المتقدمة</h1>
+                </div>
                 <div class="player-info">
+                    <i class="fas fa-user"></i>
                     <span>مرحباً، </span>
                     <span id="currentPlayerName"></span>
                 </div>
@@ -38,22 +50,30 @@
 
             <div class="menu-options">
                 <button class="menu-btn" id="createRoomBtn">
-                    <span class="btn-icon">🏠</span>
+                    <div class="btn-icon">
+                        <i class="fas fa-home"></i>
+                    </div>
                     <span class="btn-text">إنشاء غرفة</span>
                     <span class="btn-desc">ابدأ لعبة جديدة</span>
                 </button>
                 <button class="menu-btn" id="joinRoomBtn">
-                    <span class="btn-icon">🚪</span>
+                    <div class="btn-icon">
+                        <i class="fas fa-door-open"></i>
+                    </div>
                     <span class="btn-text">الانضمام لغرفة</span>
                     <span class="btn-desc">انضم للعب مع الأصدقاء</span>
                 </button>
                 <button class="menu-btn" id="localGameBtn">
-                    <span class="btn-icon">👥</span>
+                    <div class="btn-icon">
+                        <i class="fas fa-users"></i>
+                    </div>
                     <span class="btn-text">لعب محلي</span>
                     <span class="btn-desc">لاعب ضد لاعب</span>
                 </button>
                 <button class="menu-btn" id="aiGameBtn">
-                    <span class="btn-icon">🤖</span>
+                    <div class="btn-icon">
+                        <i class="fas fa-robot"></i>
+                    </div>
                     <span class="btn-text">لعب ضد الكمبيوتر</span>
                     <span class="btn-desc">تحدي الذكاء الاصطناعي</span>
                 </button>
@@ -63,52 +83,83 @@
         <!-- Room Setup -->
         <div class="room-setup" id="roomSetup" style="display: none;">
             <div class="setup-content">
-                <h2 id="roomSetupTitle">الانضمام لغرفة</h2>
+                <div class="setup-header">
+                    <i class="fas fa-door-open"></i>
+                    <h2 id="roomSetupTitle">الانضمام لغرفة</h2>
+                </div>
                 <div class="input-group">
                     <input type="text" id="roomCodeInput" placeholder="رمز الغرفة" maxlength="6" autocomplete="off">
-                    <button id="joinRoomConfirmBtn">انضمام</button>
+                    <button id="joinRoomConfirmBtn">
+                        <i class="fas fa-sign-in-alt"></i>
+                        <span>انضمام</span>
+                    </button>
                 </div>
                 <div class="loading" id="roomLoading" style="display: none;">
                     <div class="spinner"></div>
                     <span>جاري الانضمام...</span>
                 </div>
-                <button class="back-btn" id="backToMenuBtn">العودة للقائمة الرئيسية</button>
+                <button class="back-btn" id="backToMenuBtn">
+                    <i class="fas fa-arrow-right"></i>
+                    <span>العودة للقائمة الرئيسية</span>
+                </button>
             </div>
         </div>
 
         <!-- Game Area -->
         <div class="game-area" id="gameArea" style="display: none;">
             <header>
-                <h1 class="game-title">🎮 لعبة X O</h1>
+                <div class="game-header">
+                    <i class="fas fa-gamepad game-icon"></i>
+                    <h1 class="game-title">لعبة X O</h1>
+                </div>
                 <div class="room-info" id="roomInfo" style="display: none;">
+                    <i class="fas fa-home"></i>
                     <span>رمز الغرفة: </span>
                     <span id="roomCode"></span>
-                    <button id="copyRoomCode" title="نسخ رمز الغرفة">📋</button>
+                    <button id="copyRoomCode" title="نسخ رمز الغرفة">
+                        <i class="fas fa-copy"></i>
+                    </button>
                 </div>
                 
                 <div class="score-board">
-                    <div class="player-score">
-                        <span class="score-label" id="playerXName">اللاعب X</span>
-                        <span class="score" id="scoreX">0</span>
+                    <div class="player-score player-x">
+                        <i class="fas fa-times score-icon"></i>
+                        <div class="score-info">
+                            <span class="score-label" id="playerXName">اللاعب X</span>
+                            <span class="score" id="scoreX">0</span>
+                        </div>
                     </div>
-                    <div class="player-score">
-                        <span class="score-label" id="playerOName">اللاعب O</span>
-                        <span class="score" id="scoreO">0</span>
+                    <div class="player-score tie-score">
+                        <i class="fas fa-handshake score-icon"></i>
+                        <div class="score-info">
+                            <span class="score-label">التعادل</span>
+                            <span class="score" id="scoreTie">0</span>
+                        </div>
                     </div>
-                    <div class="player-score">
-                        <span class="score-label">التعادل</span>
-                        <span class="score" id="scoreTie">0</span>
+                    <div class="player-score player-o">
+                        <i class="far fa-circle score-icon"></i>
+                        <div class="score-info">
+                            <span class="score-label" id="playerOName">اللاعب O</span>
+                            <span class="score" id="scoreO">0</span>
+                        </div>
                     </div>
                 </div>
             </header>
 
             <main>
                 <div class="game-modes" id="localGameModes" style="display: none;">
-                    <button class="mode-btn active" id="pvpMode">لاعب ضد لاعب</button>
-                    <button class="mode-btn" id="pvcMode">لاعب ضد الكمبيوتر</button>
+                    <button class="mode-btn active" id="pvpMode">
+                        <i class="fas fa-users"></i>
+                        <span>لاعب ضد لاعب</span>
+                    </button>
+                    <button class="mode-btn" id="pvcMode">
+                        <i class="fas fa-robot"></i>
+                        <span>لاعب ضد الكمبيوتر</span>
+                    </button>
                 </div>
 
                 <div class="difficulty-selector" id="difficultySelector" style="display: none;">
+                    <i class="fas fa-cog"></i>
                     <label>مستوى الصعوبة:</label>
                     <select id="difficulty">
                         <option value="easy">سهل</option>
@@ -119,21 +170,35 @@
 
                 <div class="online-status" id="onlineStatus" style="display: none;">
                     <div class="status-info">
+                        <i class="fas fa-info-circle"></i>
                         <span id="gameStatusText">في انتظار بدء اللعبة...</span>
-                        <button id="startGameBtn" style="display: none;">بدء اللعبة</button>
+                        <button id="startGameBtn" style="display: none;">
+                            <i class="fas fa-play"></i>
+                            <span>بدء اللعبة</span>
+                        </button>
                     </div>
                     <div class="players-list" id="playersList"></div>
                 </div>
 
                 <div class="game-status">
                     <div class="current-player">
+                        <i class="fas fa-user-clock"></i>
                         <span id="currentPlayerText">دور اللاعب</span>
                         <span class="player-symbol" id="currentPlayerSymbol">X</span>
                     </div>
                     <div class="game-controls">
-                        <button class="control-btn" id="resetBtn">🔄 إعادة تشغيل</button>
-                        <button class="control-btn" id="leaveRoomBtn" style="display: none;">🚪 مغادرة الغرفة</button>
-                        <button class="control-btn" id="backToMenuFromGameBtn">🏠 القائمة الرئيسية</button>
+                        <button class="control-btn reset-btn" id="resetBtn">
+                            <i class="fas fa-redo"></i>
+                            <span>إعادة تشغيل</span>
+                        </button>
+                        <button class="control-btn leave-btn" id="leaveRoomBtn" style="display: none;">
+                            <i class="fas fa-door-open"></i>
+                            <span>مغادرة الغرفة</span>
+                        </button>
+                        <button class="control-btn home-btn" id="backToMenuFromGameBtn">
+                            <i class="fas fa-home"></i>
+                            <span>القائمة الرئيسية</span>
+                        </button>
                     </div>
                 </div>
 
@@ -152,13 +217,22 @@
                 <!-- Online Chat -->
                 <div class="chat-section" id="chatSection" style="display: none;">
                     <div class="chat-header">
-                        <h3>💬 الدردشة</h3>
-                        <button id="toggleChat">إخفاء</button>
+                        <div class="chat-title">
+                            <i class="fas fa-comments"></i>
+                            <h3>الدردشة</h3>
+                        </div>
+                        <button id="toggleChat">
+                            <i class="fas fa-eye-slash"></i>
+                            <span>إخفاء</span>
+                        </button>
                     </div>
                     <div class="chat-messages" id="chatMessages"></div>
                     <div class="chat-input">
                         <input type="text" id="chatInput" placeholder="اكتب رسالة..." maxlength="100">
-                        <button id="sendChatBtn">إرسال</button>
+                        <button id="sendChatBtn">
+                            <i class="fas fa-paper-plane"></i>
+                            <span>إرسال</span>
+                        </button>
                     </div>
                 </div>
             </main>
@@ -167,11 +241,19 @@
         <!-- Game Result Modal -->
         <div class="game-result" id="gameResult">
             <div class="result-content">
-                <div class="result-icon" id="resultIcon">🎉</div>
+                <div class="result-icon" id="resultIcon">
+                    <i class="fas fa-trophy"></i>
+                </div>
                 <div class="result-text" id="resultText">اللاعب X فاز!</div>
                 <div class="result-buttons">
-                    <button class="play-again-btn" id="playAgainBtn">لعب مرة أخرى</button>
-                    <button class="new-game-btn" id="newGameBtn">لعبة جديدة</button>
+                    <button class="play-again-btn" id="playAgainBtn">
+                        <i class="fas fa-redo"></i>
+                        <span>لعب مرة أخرى</span>
+                    </button>
+                    <button class="new-game-btn" id="newGameBtn">
+                        <i class="fas fa-plus"></i>
+                        <span>لعبة جديدة</span>
+                    </button>
                 </div>
             </div>
         </div>
